# srch2-ngn

./: CMakeLists.txt  wrap  wrapper.cpp
android_prerequisite/: build_android.sh
android_prerequisite/settings/: CMakeLists.Boost_add_serialization.txt
db_connectors/: CMakeLists.txt
release_files/documentation/docs/example-demo/: srch2-config.xml
release_files/documentation/docs/example-demo/logs/: srch2-log.txt
src/adapter/: CMakeLists.txt
src/core/: CMakeLists.txt
src/java/: CMakeLists.txt
src/java/sdk/: build.xml
src/server/: CMakeLists.txt  HTTPRequestHandler.cpp  JSONRecordParser.h  srch2SearchServer.cpp
src/sharding/: CMakeLists.txt
src/wrapper/: CMakeLists.txt
test/core/integration/: CMakeLists.txt
test/core/unit/: CMakeLists.txt
test/wrapper/integration/: CMakeLists.txt
test/wrapper/unit/: CMakeLists.txt
